--- a/web-api-auth-examples-master/authorization_code/public/index.html
+++ b/web-api-auth-examples-master/authorization_code/public/index.html
@@ -28,6 +28,7 @@
         <div id="oauth">
         </div>
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <button class="btn btn-default" id="obtain-playlists">Send a GET Request for playlists</button>
       </div>
     </div>
 
@@ -62,6 +63,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
+
+
       (function() {
 
         /**
@@ -119,10 +122,27 @@
               $('#login').show();
               $('#loggedin').hide();
           }
+          document.getElementById('obtain-playlists').addEventListener('click', function() {
+            $.ajax({
+              url: 'https://api.spotify.com/v1/me/playlists',
+              type: 'GET',
+              dataType: 'application/json',
+              limit: 1,
+              data: {
+                'refresh_token': refresh_token
+              }
+            }).done(function(data) {
+              access_token = data.access_token;
+              oauthPlaceholder.innerHTML = oauthTemplate({
+                access_token: access_token,
+                refresh_token: refresh_token
+              });
+            });
+          }, false);
 
           document.getElementById('obtain-new-token').addEventListener('click', function() {
             $.ajax({
-              url: '/refresh_token',
+              url: 'https://api.spotify.com/refresh_token',
               data: {
                 'refresh_token': refresh_token
               }
