--- a/web-api-auth-examples-master/authorization_code/public/index.html
+++ b/web-api-auth-examples-master/authorization_code/public/index.html
@@ -27,8 +27,8 @@
         </div>
         <div id="oauth">
         </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
-        <button class="btn btn-default" id="obtain-playlists">Send a GET Request for playlists</button>
+        <button class="btn btn-default" id="create-playlist">Create a new playlist</button>
+        <button class="btn btn-default" id="obtain-playlists">refresh the playlists</button>
         <div id="playlists">
           <div id="playlist">
 
@@ -50,7 +50,7 @@
         <div class="media-body">
           <dl class="dl-horizontal">
             <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
+            <dt>Id</dt><dd id="userid">{{id}}</dd>
             <dt>Email</dt><dd>{{email}}</dd>
             <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
             <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
@@ -201,27 +201,33 @@
                         'Authorization' : 'Bearer ' + access_token
                       },
                       success: function() {
-                        alert('success')
+                        alert('Successfully deleted')
                       }})
                       }})
                     };
 
 
 
-          document.getElementById('obtain-new-token').addEventListener('click', function() {
-            $.ajax({
-              url: 'https://api.spotify.com/refresh_token',
-              data: {
-                'refresh_token': refresh_token
-              }
-            }).done(function(data) {
-              access_token = data.access_token;
-              oauthPlaceholder.innerHTML = oauthTemplate({
-                access_token: access_token,
-                refresh_token: refresh_token
-              });
-            });
-          }, false);
+          document.getElementById('create-playlist').addEventListener('click', function() {
+            let PlaylistName = prompt('Enter New Playlist Name')
+            if (PlaylistName == null || PlaylistName == "") {
+               alert("User cancelled the prompt.");
+            } else{
+              let NewData= {name: PlaylistName, description: "New playlist description", public: true}
+              console.log(NewData)
+              access_token: access_token,
+                      $.ajax({
+                        url: 'https://api.spotify.com/v1/users/'+  document.getElementById('userid').innerText+'/playlists',
+                        type: 'POST',
+                        data: JSON.stringify(NewData),
+                        headers: {
+                          'content-type': 'application/json',
+                          'Authorization': 'Bearer ' + access_token
+                        },
+
+                      })
+          }
+          });
         }
       })();
     </script>
